--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ dependencies = [
     "typer==0.12.5",
     "python-dotenv==1.0.1",
     "networkx==3.4.2",
+    "svgwrite",
+    "pillow",
+    "cairosvg",
+    "vcd",
+    "colorama"
 ]
 
 [project.scripts]
